--- a/src/app/component/header/header.component.html
+++ b/src/app/component/header/header.component.html
@@ -2,4 +2,5 @@
     <a routerLink="/home"><div class="nav"><h1>Home</h1></div></a>
     <a routerLink="/register"><div class="nav"><h1>Register</h1></div></a>
     <a routerLink="/profile"><div class="nav"><h1>Profile</h1></div></a>
+    <a routerLink="/books"><div class="nav"><h1>books</h1></div></a>
 </section>
