--- a/src/app/component/my-profile/my-profile.component.html
+++ b/src/app/component/my-profile/my-profile.component.html
@@ -13,10 +13,7 @@
                                         <div class="contain0">{{userID.userInfo()}}
                                         </div>
                                     <div class="dat">
-                                        <div class="contain1">userId</div>
-                                        <div class="contain">
-                                            <div class="minimarg"></div>
-                                            {{userID.id_user}}</div>
+                                        <div class="contain1">ID-{{userID.id_user}}</div>
                                     </div>
                                     <div class="dat">
                                         <div class="contain1">Name</div>
