--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,3 +1,3 @@
 
-<div class="portada"><br><br><h2 class="txt" style="background-color: black;">MyBooks</h2><img src="/assets/Picsart_23-05-22_16-24-09-895.png" alt=""><br>
+<div class="portada"><br><h2 class="txt" style="background-color: black;">MyBooks</h2><img src="/assets/Picsart_23-05-22_16-24-09-895.png" alt=""><br>
 </div>
