--- a/src/app/component/header/header.component.css
+++ b/src/app/component/header/header.component.css
@@ -23,6 +23,10 @@ a{
     text-align: center;
     align-content: center;
     font-size: 30px;
-    justify-content: center; 
+    justify-content: center;
+    border-radius: 20px;
     
+}
+h1{
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
