--- a/src/app/pages/home/home.component.css
+++ b/src/app/pages/home/home.component.css
@@ -1,6 +1,6 @@
 .portada{
-    height: 840px;
-    width: 1857px;
+    height: 675px;
+    width: 100vw;
     background-color: black;
     text-align: center;
     align-items: center;
@@ -8,8 +8,9 @@
 .txt{
     color: white;
     font-size: 100px;
+    font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 img{
-    max-width: 60%;
-    max-height: 60%;
+    max-width: auto;
+    max-height: 50%;
 }
