--- a/src/app/component/footer/footer.component.css
+++ b/src/app/component/footer/footer.component.css
@@ -21,9 +21,11 @@ a{
     border: 1px solid white;
     height: 40px;
     width: 200px;
+    display: flex;
+    flex-direction: column;
     align-content: center;
+    justify-content:space-around; 
+    border-top-left-radius: 20px;
+    border-top-right-radius: 20px;
     font-size: 15px;
-    justify-content: center; 
-    text-align: center;
-    border-radius: 20px;
 }
