--- a/src/app/component/book-card/book-card.component.css
+++ b/src/app/component/book-card/book-card.component.css
@@ -7,9 +7,8 @@
 .imagen{
     height: 150px;
     width: 300px;
-    border: 1px solid white;
 }
-.footImg{
+.type{
     height: 20px;
     width: 300px;
     border: 1px solid white;
@@ -17,10 +16,21 @@
 .margin{
     height: 5px;
     width: 300px;
-    border: 1px solid white;
+    
 }
 .title{
     height: 30px;
     width: 300px;
     border: 1px solid white;
+}
+.contenido{
+    height:120px ;
+    width: 300px;
+    border: 1px solid white;
+}
+.price{
+    height:30px ;
+    width: 300px;
+    border: 1px solid white;
+
 }
