--- a/src/app/component/book-card/book-card.component.html
+++ b/src/app/component/book-card/book-card.component.html
@@ -1,7 +1,9 @@
 <div class="card">
     <div class="imagen"></div>
-    <div class="footImg"></div>
+    <div class="type"></div>
     <div class="margin"></div>
     <div class="title"></div>
     <div class="contenido"></div>
+    <div class="price"></div>
+    <div class="buy"></div>
 </div>
