--- a/src/app/pages/books/books.component.css
+++ b/src/app/pages/books/books.component.css
@@ -8,15 +8,120 @@
     background-position-y: 80px;
     display: flex;
     flex-direction: row;
-    background-color: black;
+    background-color:black;
     align-items: center;
     justify-content: space-around;
 }
 
 .margen{
     height: 80vh;
-    width: 90vw;   
+    width: 70vw;   
+    display:flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: space-around;
+}
+.card{
+    height: 360px;
+    width: 205px;
+    background-color: rgb(0, 0,0, 0.9);
+    color: white;
+    border-radius: 20px ;
+}
+.imagen{
+    height: 150px;
+    width: 200px;
+    color: white;
     display:flex;
     align-items: center;
     justify-content: space-around;
+}
+.type{
+    height: 20px;
+    width: 200px;
+    color: white;
+    text-align: center;
+    font-size: 10px;
+}
+.margin{
+    height: 5px;
+    width: 300px;
+    color: white;
+    
+}
+.title{
+    height: 30px;
+    width: 200px;
+    color: white;
+    text-align: center;
+    font-size: 28px;
+}
+.contenido{
+    height:70px ;
+    width:200px;
+    color: white;
+}
+.price{
+    height:40px ;
+    width: 40px;
+    border: 1px solid white;
+    color: rgb(0, 0, 0);
+    display: flex;
+    justify-content:center;
+    align-items: center;
+    border-radius: 50%;
+    background-color: white;
+
+}
+.but{
+    width: 200px;
+    height:34px;
+    border-radius: 20px;
+    background-color: white;
+}
+.but2{
+    width: 200px;
+    height:34px;
+    border-radius: 20px;
+    background-color:black;
+    color: white;
+    border:1px solid white;
+    
+}
+.formulario{
+    height: 70vh;
+    width: 15vw;
+    color: white;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
+    background-color: rgb(0, 0,0, 0.9);
+}
+.headform{
+    height: 5vh;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
+    text-align: center;
+}
+.inputs{
+    height: 65vh;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+}
+.portad{
+    max-height: 100%;
+    max-width: auto;
+    flex-direction: r;
+    align-items: center;
+
+}
+p{
+    color: white;
 }
