--- a/src/app/component/book-card/book-card.component.css
+++ b/src/app/component/book-card/book-card.component.css
@@ -1,36 +1,83 @@
 .card{
-    height: 400px;
-    width: 300px;
-    border: 1px  solid white;
+    height: 360px;
+    width: 205px;
     background-color: rgb(0, 0,0, 0.9);
+    color: white;
+    border-radius: 20px ;
 }
 .imagen{
     height: 150px;
-    width: 300px;
+    width: 200px;
+    color: white;
+    display:flex;
+    align-items:start;
+    justify-content: space-around;
+}
+.but3{
+    width: 50px;
+    height:34px;
+    background-color: red;
+    color: rgb(246, 246, 246);
+    font-size: 20px;
 }
 .type{
     height: 20px;
-    width: 300px;
-    border: 1px solid white;
+    width: 200px;
+    color: white;
+    text-align: center;
+    font-size: 10px;
 }
 .margin{
     height: 5px;
     width: 300px;
+    color: white;
     
 }
 .title{
     height: 30px;
-    width: 300px;
-    border: 1px solid white;
+    width: 200px;
+    color: white;
+    text-align: center;
+    font-size: 28px;
 }
 .contenido{
-    height:120px ;
-    width: 300px;
-    border: 1px solid white;
+    height:70px ;
+    width:200px;
+    color: white;
 }
 .price{
-    height:30px ;
-    width: 300px;
+    height:40px ;
+    width: 40px;
     border: 1px solid white;
+    color: rgb(0, 0, 0);
+    display: flex;
+    justify-content:center;
+    align-items: center;
+    border-radius: 50%;
+    background-color: white;
 
+}
+.but{
+    width: 200px;
+    height:34px;
+    border-radius: 20px;
+    background-color: white;
+}
+.but2{
+    width: 200px;
+    height:34px;
+    border-radius: 20px;
+    background-color:black;
+    color: white;
+    border:1px solid white;  
+}
+.portad{
+    max-height: 100%;
+    max-width: auto;
+    flex-direction: r;
+    align-items: center;
+
+}
+p{
+    color: white;
 }
