--- a/src/app/component/book-card/book-card.component.html
+++ b/src/app/component/book-card/book-card.component.html
@@ -1,9 +1,13 @@
-<div class="card">
-    <div class="imagen"></div>
-    <div class="type"></div>
+
+<div class="card" >
+    <div class="imagen"><img class="portad" src="{{bookCard.photo}}" alt=""> <button class="but3" (click)="borrar()">X</button></div>
+    <div class="type">{{bookCard.id_book|primerpipe}}</div>
     <div class="margin"></div>
-    <div class="title"></div>
-    <div class="contenido"></div>
-    <div class="price"></div>
-    <div class="buy"></div>
+    <div class="title">{{bookCard.title}}</div>
+    <div class="margin"></div>
+    <div class="contenido"> Autor:{{bookCard.author}} <br> Estilo:{{bookCard.type}}
+    </div>
+    <div class="price">{{bookCard.price}} €</div>
+    <div class="buy"><button class="but" [ngClass]="espar == true ? 'but2':'but' ">BUY</button></div>
 </div>
+
