--- a/src/app/pages/books/books.component.css
+++ b/src/app/pages/books/books.component.css
@@ -21,7 +21,7 @@
     align-items: center;
     justify-content: space-around;
 }
-.card{
+/* .card{
     height: 360px;
     width: 205px;
     background-color: rgb(0, 0,0, 0.9);
@@ -87,7 +87,7 @@
     color: white;
     border:1px solid white;
     
-}
+} */
 .formulario{
     height: 70vh;
     width: 15vw;
