--- a/src/app/component/header/header.component.html
+++ b/src/app/component/header/header.component.html
@@ -3,4 +3,6 @@
     <a routerLink="/register"><div class="nav"><h1>Register</h1></div></a>
     <a routerLink="/profile"><div class="nav"><h1>Profile</h1></div></a>
     <a routerLink="/books"><div class="nav"><h1>books</h1></div></a>
+    <a routerLink="/addBook"><div class="nav"><h1>addBook</h1></div></a>
+    <a routerLink="/updateBook"><div class="nav"><h1>update</h1></div></a>
 </section>
