--- a/src/app/component/book-card/book-card.component.css
+++ b/src/app/component/book-card/book-card.component.css
@@ -3,14 +3,15 @@
     width: 205px;
     background-color: rgb(0, 0,0, 0.9);
     color: white;
-    border-radius: 20px ;
+    border-radius: 20px;
+    
 }
 .imagen{
     height: 150px;
     width: 200px;
     color: white;
     display:flex;
-    align-items:start;
+    align-items:flex start;
     justify-content: space-around;
 }
 .but3{
@@ -26,6 +27,7 @@
     color: white;
     text-align: center;
     font-size: 10px;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 .margin{
     height: 5px;
@@ -39,11 +41,13 @@
     color: white;
     text-align: center;
     font-size: 28px;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 .contenido{
     height:70px ;
     width:200px;
     color: white;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 .price{
     height:40px ;
@@ -55,6 +59,7 @@
     align-items: center;
     border-radius: 50%;
     background-color: white;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 
 }
 .but{
@@ -62,6 +67,7 @@
     height:34px;
     border-radius: 20px;
     background-color: white;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 .but2{
     width: 200px;
@@ -69,7 +75,8 @@
     border-radius: 20px;
     background-color:black;
     color: white;
-    border:1px solid white;  
+    border:1px solid white;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;  
 }
 .portad{
     max-height: 100%;
@@ -80,4 +87,5 @@
 }
 p{
     color: white;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
