--- a/src/app/component/my-profile/my-profile.component.css
+++ b/src/app/component/my-profile/my-profile.component.css
@@ -128,7 +128,7 @@
     border: 1px solid white;
     color: white;
     text-align:justify;
-    align-items:start;
+    align-items:flex start;
     display: flex;
     flex-direction: row;
     border-radius: 20px;
