--- a/src/app/pages/add-book/add-book.component.css
+++ b/src/app/pages/add-book/add-book.component.css
@@ -31,6 +31,7 @@
     align-items: center;
     justify-content: space-around;
     text-align: center;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 .inputs{
     height: 65vh;
@@ -39,6 +40,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: space-between;
+
 }
 input{
     height: 25px;
@@ -47,16 +49,19 @@ input{
     color: white;
     text-align: center;
     border-radius: 20px;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 .portad{
     max-height: 100%;
     max-width: auto;
-    flex-direction: r;
+    flex-direction: row;
     align-items: center;
+    
 
 }
 p{
     color: white;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 .but{
     width: 200px;
@@ -65,4 +70,5 @@ p{
     background-color: rgb(0, 0, 0);
     color: white;
     border: 1px solid white;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
