--- a/src/app/pages/books/books.component.html
+++ b/src/app/pages/books/books.component.html
@@ -1,29 +1,12 @@
 <div class="fondo">
-    <div class="margen">
-        <ng-contairner *ngFor="let book of books;let even = even">
-            <app-book-card [bookCard]="book" [espar]="even" (borrar_)="borrar($event)"></app-book-card>
-        </ng-contairner>
-    <div *ngIf="books.length===0" style="color: white;"> no hay libros</div>
-    </div>
-    <div class="formulario">
-        <div class="headform"><h1>AÑADIR LIBROS</h1></div>
-        <div class="inputs">
-            <p>ID.BOOK</p>
-            <input type="number" #input0>
-            <p>ID.USER</p>
-            <input type="number" #input1>
-            <p>TITULO</p>
-            <input type="text" #input2>
-            <p>ESTILO</p>
-            <input type="text" #input3>
-            <p>AUTOR</p>
-            <input type="text" #input4>
-            <p>PRECIO</p>
-            <input type="number" #input5>
-            <p>IMAGEN</p>
-            <input type="text" #input6>
-            <button class="but2" (click)="newBook(+input0.value,+input1.value,input2.value,input3.value,input4.value,+input5.value,input6.value)">AÑADIR</button>
-            
+    <div class="inputs">
+    <input type="text" placeholder="Book ID" #input30>
+            <button class="but" type="button" (click)=find(input30.value)>FIND YOUR BOOK</button>
         </div>
+    <div class="margen">
+        <ng-container *ngFor="let book of books;let i=index;let even = even">
+            <app-book-card [bookCard]="book" [espar]="even" [updateBook]="updateBook" (borrar_)="borrar($event)"></app-book-card>
+        </ng-container>
+    <div *ngIf="books.length===0" style="color: white; font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;">OUT OF STOCK</div>
     </div>
 </div>
