--- a/src/app/pages/update-book/update-book.component.css
+++ b/src/app/pages/update-book/update-book.component.css
@@ -31,6 +31,7 @@
     align-items: center;
     justify-content: space-around;
     text-align: center;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 .inputs{
     height: 65vh;
@@ -47,6 +48,7 @@ input{
     color: white;
     text-align: center;
     border-radius: 20px;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 .portad{
     max-height: 100%;
@@ -57,6 +59,7 @@ input{
 }
 p{
     color: white;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 .but{
     width: 200px;
@@ -65,4 +68,5 @@ p{
     background-color: rgb(0, 0, 0);
     color: white;
     border: 1px solid white;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
