--- a/src/app/component/book-card/book-card.component.css
+++ b/src/app/component/book-card/book-card.component.css
@@ -27,7 +27,7 @@
     color: white;
     text-align: center;
     font-size: 10px;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-family:var(--letra)
 }
 .margin{
     height: 5px;
@@ -41,14 +41,13 @@
     color: white;
     text-align: center;
     font-size: 28px;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-family:var(--letra)
 }
 .contenido{
     height:70px ;
     width:200px;
     color: white;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-}
+    font-family:var(--letra)}
 .price{
     height:40px ;
     width: 40px;
@@ -59,15 +58,13 @@
     align-items: center;
     border-radius: 50%;
     background-color: white;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-
-}
+    font-family:var(--letra)}
 .but{
     width: 200px;
     height:34px;
     border-radius: 20px;
     background-color: white;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-family:var(--letra)
 }
 .but2{
     width: 200px;
@@ -76,7 +73,7 @@
     background-color:black;
     color: white;
     border:1px solid white;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;  
+    font-family: var(--letra)
 }
 .portad{
     max-height: 100%;
@@ -87,5 +84,4 @@
 }
 p{
     color: white;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-}
+    font-family:var(--letra)}
