--- a/src/app/component/footer/footer.component.css
+++ b/src/app/component/footer/footer.component.css
@@ -1,7 +1,7 @@
 .footer{
     height: 40px;
     width: 100vw;
-    background-color: black;
+    background-color:var(--oscuro);
     display: flex;
     flex-direction:row; 
     align-items:flex;
@@ -30,5 +30,5 @@ a{
     font-size: 15px;
 }
 p{
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-family: var(--letra)
 }
