--- a/src/app/component/form-register/form-register.component.css
+++ b/src/app/component/form-register/form-register.component.css
@@ -1,7 +1,7 @@
 .formulario{
     height: 88vh;
     width:100vw;
-    background-color: black;
+    background-color:var(--oscuro);
     display: flex;
     flex-direction:column; 
     align-items:center;
@@ -17,7 +17,7 @@
 }
 .inf{
     color: white;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-family: var(--letra)
 }
 input{
     height: 20px;
@@ -26,5 +26,4 @@ input{
     color: white;
     text-align: center;
     border-radius: 20px;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-}
+    font-family: var(--letra)}
