--- a/src/app/component/header/header.component.css
+++ b/src/app/component/header/header.component.css
@@ -1,7 +1,7 @@
 .header{
     height: 80px;
     width: 100vw;
-    background-color: black;
+    background-color:var(--oscuro);
     display: flex;
     flex-direction:row; 
     align-items:center;
@@ -23,13 +23,22 @@ a{
     height: 100px;
     width: 200px;
     text-align: center;
-    align-content: center;
     font-size: 30px;
-    justify-content: center;
     border-bottom-left-radius: 20px;
     border-bottom-right-radius: 20px;
+    flex-direction: column;
+    justify-content:space-around;
     
 }
+ .nav:hover{
+    
+    height: 250px;
+    width: 200px;
+    display: flex;
+    color: white;
+    transition: 4s;
+    
+ }
 h1{
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-family:var(--letra)
 }
