--- a/src/app/pages/add-book/add-book.component.css
+++ b/src/app/pages/add-book/add-book.component.css
@@ -8,7 +8,7 @@
     background-position-y: 80px;
     display: flex;
     flex-direction: row;
-    background-color:black;
+    background-color:var(--oscuro);
     align-items: center;
     justify-content: space-around;
 }
@@ -31,8 +31,7 @@
     align-items: center;
     justify-content: space-around;
     text-align: center;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-}
+    font-family:var(--letra)}
 .inputs{
     height: 65vh;
     width: 100%;
@@ -45,11 +44,11 @@
 input{
     height: 25px;
     width: 400px;
-    background-color: rgb(0, 0,0,0.1);
+    background-color:var(--oscuro);
     color: white;
     text-align: center;
     border-radius: 20px;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-family: var(--letra)
 }
 .portad{
     max-height: 100%;
@@ -61,13 +60,13 @@ input{
 }
 p{
     color: white;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-family: var(--letra)
 }
 .but{
     width: 200px;
     height:34px;
     border-radius: 20px;
-    background-color: rgb(0, 0, 0);
+    background-color: var(--oscuro);
     color: white;
     border: 1px solid white;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
