--- a/src/app/pages/books/books.component.css
+++ b/src/app/pages/books/books.component.css
@@ -8,7 +8,7 @@
     background-position-y: 80px;
     display: flex;
     flex-direction: column;
-    background-color:black;
+    background-color:var(--oscuro);
     align-items: center;
     justify-content: flex-end;
 }
@@ -29,18 +29,17 @@
     flex-direction: column;
     align-items: center;
     justify-content: space-around;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-
+    font-family:var(--letra)
 }
 
 p{
     color: white;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-family:var(--letra)
 }
 input{
     height: 25px;
     width: 400px;
-    background-color: rgb(0, 0, 0);
+    background-color: var(--oscuro);
     color: white;
     text-align: center;
     border-radius: 20px;
@@ -50,8 +49,8 @@ input{
     width: 200px;
     height:34px;
     border-radius: 20px;
-    background-color: rgb(0, 0, 0);
+    background-color: var(--oscuro);
     color: white;  
     border: 1px solid white;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-family: var(--letra);
 }
