--- a/src/app/pages/home/home.component.css
+++ b/src/app/pages/home/home.component.css
@@ -1,15 +1,14 @@
 .portada{
     height: 88vh;
     width: 100vw;
-    background-color: black;
+    background-color: var(--oscuro);
     text-align: center;
     align-items: center;
 }
 .txt{
     color: white;
     font-size: 100px;
-    font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-}
+    font-family:var(--letra)}
 img{
     max-width: auto;
     max-height: 60%;
