--- a/src/styles.css
+++ b/src/styles.css
@@ -4,3 +4,8 @@
     padding: 0;
     box-sizing: border-box;
 }
+:root{
+    --oscuro:rgb(28, 27, 27);
+    --letra: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    --transp:rgb(28, 27, 27, 0.8)
+}
