--- a/src/app/component/footer/footer.component.html
+++ b/src/app/component/footer/footer.component.html
@@ -1,6 +1,6 @@
 <section class="footer">
-    <a href=""><div class="red"><p>Facebook</p></div></a>
-    <a href=""><div class="red"><p>Instagram</p></div></a>
-    <a href=""><div class="red"><p>Linkedin</p></div></a>
-    <a href=""><div class="red"><p>Twitter</p></div></a>
+    <a href="https://es-es.facebook.com"><div class="red"><p>Facebook</p></div></a>
+    <a href="https://www.instagram.com"><div class="red"><p>Instagram</p></div></a>
+    <a href="https://es.linkedin.com"><div class="red"><p>Linkedin</p></div></a>
+    <a href="https://www.youtube.com/watch?v=xvFZjo5PgG0"><div class="red"><p>Twitter</p></div></a>
 </section>
