--- a/src/app/component/header/header.component.css
+++ b/src/app/component/header/header.component.css
@@ -28,6 +28,7 @@ a{
     border-bottom-right-radius: 20px;
     flex-direction: column;
     justify-content:space-around;
+    transition: 4s;
     
 }
  .nav:hover{
