--- a/src/app/component/my-profile/my-profile.component.css
+++ b/src/app/component/my-profile/my-profile.component.css
@@ -1,5 +1,5 @@
 .bgColor{
-    background-color: black;
+    background-color: var(--oscuro);
     height: 88vh;
     width: 100vw;  
 }
@@ -54,7 +54,7 @@
     border: 1px solid white;
     display: flex;
     flex-direction: row;
-    background-color: rgb(0, 0, 0,0.8);
+    background-color:var(--transp);
     border-radius: 20px;
 }
 
@@ -113,14 +113,13 @@
     justify-content:space-around;
     font-size: xx-large;
     border-radius: 20px;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-}
+    font-family: var(--letra)}
 .contain1{
     height: 20px;
     width: 100px;
     color: white;
     text-align: center;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-family:var(--letra)
 }
 .contain{
     height: 20px;
@@ -132,7 +131,7 @@
     display: flex;
     flex-direction: row;
     border-radius: 20px;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-family:var(--letra)
 }
 .minimarg{
     height: 20px;
@@ -152,21 +151,28 @@ img{
 input{
     height: 20px;
     width: 150px;
-    background-color: black;
+    background-color: var(--oscuro);
     color: white;
     text-align: center;
     border-radius: 20px;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-}
+    font-family: var(--letra)}
 button{
     height: 100px;
     width: 300px;
-    background-color: black;
+    background-color: var(--oscuro);
     border:1px solid white;
     color: white;
     font-size: xx-large;
     border-radius: 50px;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-family:var(--letra);
+    transition: 3s;
 }
+    
+    button:hover{
+        background-color: rgb(255, 253, 253, 0.9) ;
+        color: black;
+        transition: 3s;
+    }
+
 
 
