--- a/src/app/pages/add-book/add-book.component.css
+++ b/src/app/pages/add-book/add-book.component.css
@@ -21,7 +21,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: space-around;
-    background-color: rgb(0, 0,0, 0.9);
+    background-color: var(--transp);
 }
 .headform{
     height: 5vh;
@@ -69,5 +69,11 @@ p{
     background-color: var(--oscuro);
     color: white;
     border: 1px solid white;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-family: var(--letra);
+    transition: 3s;
 }
+    .but:hover{
+        background-color: rgb(255, 253, 253, 0.9) ;
+        color: black;
+        transition: 3s;
+    }
