--- a/src/app/pages/books/books.component.css
+++ b/src/app/pages/books/books.component.css
@@ -53,4 +53,11 @@ input{
     color: white;  
     border: 1px solid white;
     font-family: var(--letra);
+    transition: 3s;
 }
+    .but:hover{
+        background-color: rgb(255, 253, 253, 0.9) ;
+        color: black;
+        transition: 3s;
+    }
+
