--- a/src/app/component/form-register/form-register.component.css
+++ b/src/app/component/form-register/form-register.component.css
@@ -1,18 +1,23 @@
 .formulario{
     height: 88vh;
     width:100vw;
+    background-image:url("/assets/Picsart_23-05-22_16-24-09-895.png");
+    background-size:75% auto;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-position-y: 80px;
     background-color:var(--oscuro);
     display: flex;
     flex-direction:column; 
     align-items:center;
-    align-content: center; 
-    justify-content: space-around;
+    justify-content: center;
 }
 
 .formin{
-    height: 500px;
+    height: 200px;
     width: 177px;
     text-align: center;
+    background-color: var(--transp);
    
 }
 .inf{
