--- a/src/app/component/header/header.component.html
+++ b/src/app/component/header/header.component.html
@@ -1,9 +1,9 @@
 <section class="header">
-    <a routerLink="/home"><div class="nav"><h1>Home</h1></div></a>
-    <a routerLink="/register"><div class="nav"><h1>Register</h1></div></a>
-    <a routerLink="/profile"><div class="nav"><h1>Profile</h1></div></a>
-    <a routerLink="/books"><div class="nav"><h1>books</h1></div></a>
-    <a routerLink="/addBook"><div class="nav"><h1>addBook</h1></div></a>
-    <a routerLink="/updateBook"><div class="nav"><h1>update</h1></div></a>
-    <a routerLink="/login"><div class="nav"><h1>login</h1></div></a>
+    <a routerLink="/home"><div class="nav" routerLinkActive="active"><h1>Home</h1></div></a>
+    <a routerLink="/register"><div class="nav" routerLinkActive="active"><h1>Register</h1></div></a>
+    <a routerLink="/profile"><div class="nav" routerLinkActive="active"><h1>Profile</h1></div></a>
+    <a routerLink="/books"><div class="nav" routerLinkActive="active" ><h1>books</h1></div></a>
+    <a routerLink="/addBook"><div class="nav" routerLinkActive="active"><h1>addBook</h1></div></a>
+    <a routerLink="/updateBook"><div class="nav" routerLinkActive="active"><h1>update</h1></div></a>
+    <a routerLink="/login"><div class="nav" routerLinkActive="active"><h1>login</h1></div></a>
 </section>
