--- a/src/app/pages/books/books.component.html
+++ b/src/app/pages/books/books.component.html
@@ -7,6 +7,6 @@
         <ng-container *ngFor="let book of books;let i=index;let even = even">
             <app-book-card [bookCard]="book" [espar]="even" [updateBook]="updateBook" (borrar_)="borrar($event)"></app-book-card>
         </ng-container>
-    <div *ngIf="books.length===0" style="color: white; font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;">OUT OF STOCK</div>
+    <!-- <div *ngIf="books.length===0" style="color: white; font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;">OUT OF STOCK</div> -->
     </div>
 </div>
