--- a/src/app/component/form-register/form-register.component.html
+++ b/src/app/component/form-register/form-register.component.html
@@ -5,18 +5,27 @@
     <div class="formin">
         <form [formGroup]="myForm">
         <div class="form-group mt-4">
-            <label class="inf">NOMBRE COMPLETO</label> 
+            <label class="inf">NOMBRE</label> 
             <input class="inp" type="text" formControlName="nombre" 
-            [ngClass]="{'is-invalid': (myForm.get('nombre').dirty || myForm.get('nombre').touched) && !myForm.get('nombre').valid}"><br>
+            [ngClass]="{'is-invalid': (myForm.get('nombre').dirty || myForm.get('nombre').touched) && !myForm.get('nombre').valid}"#name><br>
             <div *ngIf="!myForm.get('nombre').valid" class="invalid-feedback">
                 El nombre es necesario
             </div>
         </div>
 
+        <div class="form-group mt-4">
+          <label class="inf">APELLIDO</label> 
+          <input class="inp" type="text" formControlName="apellido" 
+          [ngClass]="{'is-invalid': (myForm.get('apellido').dirty || myForm.get('apellido').touched) && !myForm.get('apellido').valid}"#last_name><br>
+          <div *ngIf="!myForm.get('apellido').valid" class="invalid-feedback">
+              El apellido es necesario
+          </div>
+        </div>
+
         <div class="form-group">
         <label class="inf">CORREO ELECTRONICO</label>
         <input class="inp" type="text" formControlName="email"
-        [ngClass]="{'is-invalid': (myForm.get('email').dirty || myForm.get('email').touched) && !myForm.get('email').valid}">
+        [ngClass]="{'is-invalid': (myForm.get('email').dirty || myForm.get('email').touched) && !myForm.get('email').valid}"#mail>
         <div *ngIf="!myForm.get('email').valid" class="invalid-feedback">
             <div *ngIf="myForm.get('email').errors.required">La dirección de email es obligatoria</div>
             <div *ngIf="myForm.get('email').errors.email">Dirección email incorrecta</div>
@@ -27,7 +36,7 @@
         <div class="form-group">
         <label class="inf">CONTRASEÑA</label>
         <input class="inp" type="text" formControlName="password"
-        [ngClass]="{'is-invalid': (myForm.get('password').dirty || myForm.get('password').touched) && !myForm.get('password').valid}">
+        [ngClass]="{'is-invalid': (myForm.get('password').dirty || myForm.get('password').touched) && !myForm.get('password').valid} "#pass>
                   <div *ngIf="!myForm.get('password').valid" class="invalid-feedback">
             <div *ngIf="myForm.get('password').errors.required">La clave es obligatoria</div>
             <div *ngIf="myForm.get('password').errors.minlength">La clave debe tener al menos 8 caracteres</div>    
@@ -39,12 +48,16 @@
         <div class="form-group">
         <label class="inf">REPITA LA CONTRASEÑA</label>
         <input class="inp" type="text" formControlName="password2"
-        [ngClass]="{'is-invalid': (myForm.get('password2').dirty || myForm.get('password2').touched) && !myForm.get('password2').valid}">
+        [ngClass]="{'is-invalid': (myForm.get('password2').dirty || myForm.get('password2').touched) && !myForm.get('password2').valid}" #pass2>
         <div *ngIf="!myForm.get('password2').valid" class="invalid-feedback">
             <div *ngIf="myForm.get('password2').errors.required">La clave es obligatoria</div>
             <div *ngIf="!myForm.get('password2').errors.required && 
                         myForm.get('password2').errors.matchPassword">Las claves no coinciden</div> 
           </div>
+        </div>
+        <div class="form-group">
+          <label class="inf">IMAGEN DE PERFIL</label>
+          <input  class="inp" type="text" formControlName="photo">
         </div>
     <button class="btn btn-danger btn-block" (click)="register()" [disabled]="myForm.invalid">add</button>
     </form>
