--- a/src/app/pages/update-book/update-book.component.html
+++ b/src/app/pages/update-book/update-book.component.html
@@ -14,9 +14,12 @@
             <input type="text" #input4 [value]="updatedbook?.photo">
             <p>ID</p>
             <input type="number" #input5 [value]=" updatedbook?.id_book">
-            <button class="but" (click)="search(+input5.value)">Buscar</button>
-            <button class="but" (click)="updateBook(input0.value,input1.value,input2.value,input3.value,input4.value,input5.value)">MODIFICAR</button>
+            <button >Buscar</button>
+            <button >MODIFICAR</button>
             
         </div>
     </div>
 </div>
+<!-- botones para buscar y modificar -->
+<!-- class="but" (click)="search(+input5.value)"
+class="but" (click)="updateBook(input0.value,input1.value,input2.value,input3.value,input4.value,input5.value)" -->
