--- a/src/app/pages/books/books.component.html
+++ b/src/app/pages/books/books.component.html
@@ -1,7 +1,7 @@
 <div class="fondo">
     <div class="inputs">
-    <input type="text" placeholder="Book ID" #input30>
-            <button class="but" type="button" (click)=find(input30.value)>FIND YOUR BOOK</button>
+    <input type="text" [(ngModel)]="buscar" placeholder="Book ID">
+            <button class="but" type="button"(click)="find(buscar)" >FIND YOUR BOOK</button>
         </div>
     <div class="margen">
         <ng-container *ngFor="let book of books;let i=index;let even = even">
@@ -10,3 +10,5 @@
     <!-- <div *ngIf="books.length===0" style="color: white; font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;">OUT OF STOCK</div> -->
     </div>
 </div>
+<!-- boton buscar libro -->
+<!--(click) =find(input30.value) -->
